deploy/gke/tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-security-tracker
spec:
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              cpu: 125m
              memory: 512Mi
              ephemeral-storage: 256Mi
            limits:
              memory: 1Gi
              ephemeral-storage: 1Gi
        - name: maintenance
          resources:
            requests:
              cpu: 125m
              memory: 512Mi
              ephemeral-storage: 256Mi
            limits:
              memory: 1Gi
              ephemeral-storage: 1Gi
